fixed light mode and dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ p, h1, h2, h3, h4, h5, h6 {
 .background h1 {
   display: flex;
   justify-content: center;
-  margin: 2rem 0;
+  margin: 1rem;
 }
 .Contents{
   overflow: hidden;
