--- a/src/comp/Css/BackgroundCircle.css
+++ b/src/comp/Css/BackgroundCircle.css
@@ -1,64 +1,51 @@
 
 .Circle1{
     position: fixed;
-    background-color: #023E8A;
+    background-color: var(--background-circle-color);
     height: 6rem;
     width: 6rem;
     border-radius: 4rem;
     filter: blur(1rem);
-    box-shadow: -1rem 0rem 10rem 3rem #023E8Aed;
+    box-shadow: -1rem 0rem 10rem 3rem var(--background-circle-color);
     z-index: -2;
-    transform: translate(80vw, 15vh)
+    right: -1.2rem;
+    top: 3.5rem;
 }
 .Circle2{
     position: fixed;
-    background-color: #023E8A;
+    background-color: var(--background-circle-color);
     height: 6rem;
     width: 6rem;
     border-radius: 4rem;
     filter: blur(1rem);
-    box-shadow: 1rem 0rem 10rem 3rem #023E8Aed;
+    box-shadow: 1rem 0rem 10rem 3rem var(--background-circle-color);
     z-index: -1;
-    transform: translate(-12vw, 70vh)
+    left: -1.2rem;
+    bottom: 2.5rem;
 }
 @media (min-width: 375px){
-    .Circle1{
-        transform: translate(85vw, 15vh)
-    }
-    .Circle2{
-        transform: translate(-11vw, 70vh)
-    }
 }
 @media (min-width: 425px){
-    .Circle1{
-        transform: translate(85vw, 15vh)
-    }
-    .Circle2{
-        transform: translate(-8vw, 70vh)
-    }
+
 }
 @media (min-width: 768px){
     .Circle1{
         height: 8rem;
         width: 8rem;
-        transform: translate(88vw, 15vh)
     }
     .Circle2{
         height: 8rem;
         width: 8rem;
-        transform: translate(-4vw, 70vh)
     }
 }
 @media (min-width: 1024px){
     .Circle1{
         height: 9rem;
         width: 9rem;
-        transform: translate(88vw, 15vh)
     }
     .Circle2{
         height: 9rem;
         width: 9rem;
-        transform: translate(-2vw, 65vh)
     }
 }
 @media (min-width: 1440px){
@@ -66,14 +53,14 @@
         height: 12rem;
         width: 12rem;
         border-radius: 12rem;
-        box-shadow: -1rem 0rem 10rem 5rem #023E8Aed;
-        transform: translate(89vw, 15vh)
+        box-shadow: -1rem 0rem 10rem 5rem var(--background-circle-color);
+
     }
     .Circle2{
         height: 12rem;
         width: 12rem;
         border-radius: 12rem;
-        box-shadow: 1rem 0rem 10rem 5rem #023E8Aed;
-        transform: translate(-2vw, 66vh)
+        box-shadow: 1rem 0rem 10rem 5rem var(--background-circle-color);
+
     }
 }
