--- a/src/comp/Css/NavigationalButtons.css
+++ b/src/comp/Css/NavigationalButtons.css
@@ -72,6 +72,7 @@
     border-radius: 0.3rem;
     text-align: center;
     outline: 0.1rem solid var(--text-color);
+    font-weight: bold;
 }
 @media(min-width: 375px){
     .NavButtons{
