--- a/src/comp/Css/ProjectCarousel.css
+++ b/src/comp/Css/ProjectCarousel.css
@@ -1,8 +1,10 @@
 .CarouselOutline {
-    outline: 0.1rem solid var(--text-color);
+    
     border-radius: 1rem;
     margin: 1rem 1rem 1rem 1rem;
+    background-color: var(--carousel-color);
     transition: transform 0.5s ease-in-out;
+    box-shadow: 0.1rem 0.1rem 0rem 0.2rem var(--box-shadow-color)
 
 }
 
@@ -39,7 +41,6 @@
     outline: 0.1rem solid white;
     border-radius: 0.5rem;
     padding: 0.4rem;
-    box-shadow: 2px 1px 10px red;
 }
 
 .Button:hover {
@@ -92,18 +93,18 @@
     }
 
     .Title {
-        font-size: 1.5rem;
-        margin-bottom: 1rem;
+        font-size: 1.1rem;
+        margin-bottom: 0.5rem;
     }
 
     .Desc {
-        font-size: 1.5rem;
+        font-size: 1.1rem;
         margin-bottom: 1rem;
     }
 
     .Button {
-        font-size: 1.1rem;
-        padding: 0.8rem;
+        font-size: 0.8rem;
+        padding: 0.6rem;
     }
 
     .Card {
